# exapi

./: .gitignore  Makefile  README.md  fmt.sh  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
docs/docs/code-reference/: binance.md  bybit.md
exapi/: exceptions.py  models.py  typedefs.py  utils.py
exapi/base/: rest.py
exapi/exchanges/binance/: enums.py  exceptions.py  models.py  rest.py  typedefs.py  utils.py
exapi/exchanges/bybit/: enums.py  exceptions.py  models.py  rest.py  typedefs.py  utils.py
exapi/exchanges/ftx/: exceptions.py  models.py  rest.py  typedefs.py  utils.py
tests/test_binance/: conftest.py
tests/test_binance/test_rest/: test_public.py  test_rest_without_creds_private.py  test_rest_without_creds_public.py
tests/test_binance/test_rest/test_private/: test_get_account_info.py  test_new_order.py
tests/test_binance/test_rest/test_public/: test_get_exchange_info.py  test_get_ticker.py
tests/test_bybit/: test_utils.py
tests/test_bybit/test_rest/test_private/: conftest.py  test_get_balances.py  test_new_order.py
tests/test_bybit/test_rest/test_public/: test_get_symbols.py  test_get_ticker.py
tests/test_ftx/: test_utils.py
tests/test_ftx/test_rest/test_public/: test_get_markets.py  test_get_orderbook.py
