[tool.poetry]
name = "exapi"
version = "0.1.0"
description = ""
authors = ["astsu <astsu.work@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = {extras = ["speedups"], version = "^3.8.1"}

[tool.poetry.dev-dependencies]
black = "^22.1.0"
pytest = "^7.1.1"
pytest-asyncio = "^0.18.2"
python-dotenv = "^0.19.2"
pytest-xdist = "^2.5.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
